fix text wrap on chat messages

--- a/src/app/components/chat/chat.component.css
+++ b/src/app/components/chat/chat.component.css
@@ -23,21 +23,20 @@ label {
 
 #messages {
     max-height: 400px;
-    min-height: 400px;
-    
+    min-height: 400px;    
     border: 3px solid steelblue;
     display: flex;
     flex-direction: column;
     list-style: none;
     padding: 0;
-    overflow: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
 
 }
 
 .message_sent {
     text-align: center;
     background-color: #5BC236;
-    width: fit-content;
     color: white;
     border-radius: 5px;
     margin-left: auto;
@@ -46,8 +45,9 @@ label {
     margin-bottom: 5px;
     padding: 5px;
     list-style: none;
-    max-width: 300px;
+    max-width: 500px;
     overflow-wrap: break-word;
+    white-space: pre-line;
 }
 .message_received {
     text-align: center;
@@ -61,8 +61,9 @@ label {
     margin-bottom: 5px;
     padding: 5px;
     list-style: none;
-    max-width: 300px;
     overflow-wrap: break-word;
+    white-space: pre-line;
+    max-width: 500px;
 }
 
 .username {
